readd last files

--- a/services/host/tsconfig.json
+++ b/services/host/tsconfig.json
@@ -4,8 +4,7 @@
     "outDir": "./dist/",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@packages/*": ["../../packages/*"] // Псевдонім для `packages`
+      "@/*": ["./src/*"]
     }
   }
 }
