--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@packages/shared",
   "version": "1.0.0",
-  "main": "./src/index.ts"
+  "main": "./src/index.ts",
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  }
 }
