Added rendering of product cards from the server

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "1.0.0",
     "scripts": {
         "start:frontend": "concurrently -n admin,host,shop,header \"npm run start --workspace=services/admin\" \"npm run start --workspace=services/host\" \"npm run start --workspace=services/shop\" \"npm run start --workspace=services/header\"",
-        "start:gateway": "cd backend/gateway && npm run start:dev",
         "start:cardRender": "cd backend/card-render-service && npm run start:dev",
-        "start:backend": "npm run start:gateway && npm run start:cardRender",
-        "start": "npm run start:frontend && npm run start:backend"
+        "start:backend": "npm run start:cardRender",
+        "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
+
     },
     "workspaces": [
         "packages/*",
