--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -9,7 +9,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "composite": true
+    "composite": true,
+    "paths": {
+            "@shop/*": ["../../services/shop/src/*"]
+        }
   },
-  
 }
