--- a/services/shop/tsconfig.json
+++ b/services/shop/tsconfig.json
@@ -5,7 +5,8 @@
     "baseUrl": ".",
     "allowJs": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@shop/*": ["../../services/shop/src/*"]
     }
   }
 }
