--- a/packages/build-config/tsconfig.json
+++ b/packages/build-config/tsconfig.json
@@ -3,12 +3,12 @@
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "ESNext",
-    "target": "es5",
+    "target": "ES6",
     "jsx": "react-jsx",
     "allowJs": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "composite": true
+    "composite": true,
   }
 }
