basket product card skeleton added

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -11,7 +11,8 @@
     "allowSyntheticDefaultImports": true,
     "composite": false,
     "paths": {
-            "@shop/*": ["../../services/shop/src/*"]
+            "@shop/*": ["../../services/shop/src/*"],
+            "@packages/*": ["../../packages/shared/src"]
         }
   },
 }
