Fixed a bug with the database that broke the response from a temporarily created microservice. Added database queries via TCP. The previous version was not included in the commit.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "scripts": {
         "start:frontend": "concurrently -n admin,host,shop,header \"npm run start --workspace=services/admin\" \"npm run start --workspace=services/host\" \"npm run start --workspace=services/shop\" \"npm run start --workspace=services/header\"",
         "start:cardRender": "cd backend/card-render-service && npm run start:dev",
-        "start:backend": "npm run start:cardRender",
-        "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
+        "start:database": "cd backend/database && npm run start",
+        "start:backend": "concurrently \"npm run start:cardRender\" \"npm run start:database\"",
+        "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
     },
     "workspaces": [
         "packages/*",
