--- a/backend/card-render-service/tsconfig.json
+++ b/backend/card-render-service/tsconfig.json
@@ -10,12 +10,20 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "composite": false,
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@database/*": ["../database/src/*"]
+    }
+  },
+  "include": [
+    "src/**/*",
+    "../database/**/*"
+  ]
 }
