--- a/backend/database/package.json
+++ b/backend/database/package.json
@@ -24,8 +24,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.1",
+    "@nestjs/common": "^11.0.12",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.0.12",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.5.0",
     "reflect-metadata": "^0.2.2",
