--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "start:frontend": "concurrently -n admin,host,shop,header \"npm run start --workspace=services/admin\" \"npm run start --workspace=services/host\" \"npm run start --workspace=services/shop\" \"npm run start --workspace=services/header\"",
         "start:cardRender": "cd backend/card-render-service && npm run start:dev",
         "start:database": "cd backend/database && npm run start",
-        "start:backend": "concurrently \"npm run start:cardRender\" \"npm run start:database\"",
+        "start:backend": "concurrently \"npm run start:database\" \"npm run start:cardRender\"",
         "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
     },
     "workspaces": [
