--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -11,6 +11,7 @@
         "allowSyntheticDefaultImports": true,
         "composite": false,
         "paths": {
+            "@/*": ["./src/*"],
             "@shop/*": [
                 "../../services/product/src/*"
             ],
@@ -22,7 +23,7 @@
             ]
         }
     },
-    // "include": [
-    //     "src"
-    // ]
+    "include": [
+        "src"
+    ]
 }
