Added a microservice for registration and logging

--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
     "version": "1.0.0",
     "scripts": {
         "start:frontend": "concurrently -n admin,host,shop,header,productPage \"npm run start --workspace=services/admin\" \"npm run start --workspace=services/host\" \"npm run start --workspace=services/shop\" \"npm run start --workspace=services/product\" \"npm run start --workspace=services/register\"",
-        "start:cardRender": "cd backend/card-render-service && npm run start:dev",
         "start:database": "cd backend/database && npm run start:dev",
-        "start:backend": "concurrently \"npm run start:database\" \"npm run start:cardRender\"",
+        "start:productService": "cd backend/product-service && npm run start:dev",
+        "start:authService": "cd backend/auth-service && npm run start:dev",
+        "start:backend": "concurrently \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\"",
         "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
     },
     "workspaces": [
         "packages/*",
-        "services/*"
+        "services/*",
+        "backend/*"
     ],
     "devDependencies": {
         "@types/node": "^22.13.10",
