--- a/backend/auth-service/package.json
+++ b/backend/auth-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "card-render-service",
+  "name": "auth-service",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,11 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^11.0.17",
-    "@nestjs/core": "^11.0.11",
+    "@nestjs/common": "^11.0.1",
+    "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "^11.0.17",
+    "@nestjs/microservices": "^11.0.20",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/throttler": "^6.4.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -43,7 +44,7 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
-    "globals": "^15.14.0",
+    "globals": "^16.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
