--- a/backend/database/package.json
+++ b/backend/database/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@nestjs/common": "^11.0.17",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^11.0.17",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.6.0",
