--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start:productService": "cd backend/product-service && npm run start:dev",
         "start:authService": "cd backend/auth-service && npm run start:dev",
         "start:backend": "concurrently \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\"",
-        "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
+        "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+        "prisma:generate:dev": "cd backend/database && dotenv -e .env.development -- npx prisma generate"
     },
     "workspaces": [
         "packages/*",
