--- a/backend/auth-service/package.json
+++ b/backend/auth-service/package.json
@@ -26,6 +26,7 @@
     "@nestjs/microservices": "^11.0.20",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/throttler": "^6.4.0",
+    "axios": "^1.9.0",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
