Fixed a bug with the SearchHeader component. Embedded it in the product page

--- a/services/shop/tsconfig.json
+++ b/services/shop/tsconfig.json
@@ -2,9 +2,12 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist/",
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "allowJs": true,
     "composite": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": ["./src/*"],
       "@shop/*": ["../../services/shop/src/*"]
