--- a/backend/database/package.json
+++ b/backend/database/package.json
@@ -30,6 +30,7 @@
     "@nestjs/microservices": "^11.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.6.0",
+    "bcryptjs": "^3.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
