--- a/backend/auth-service/package.json
+++ b/backend/auth-service/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
+    "nodemailer": "^7.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
