--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "start:dev": "concurrently \"npm run start:backend\" \"npm run prisma:generate\" \"npm run start:frontend\"",
         "prisma:generate": "cd backend/database && npx prisma generate",
 
-        "start:frontend:prod": "concurrently -n admin,host,shop,header,productPage,auth \"npm run build:dev --workspace=services/admin\" \"npm run build:dev --workspace=services/host\" \"npm run build:dev --workspace=services/shop\" \"npm run build:dev --workspace=services/product\" \"npm run build:dev --workspace=services/auth\"",
+        "start:frontend:prod": "concurrently -n admin,host,shop,header,productPage,auth \"npm run build:prod --workspace=services/admin\" \"npm run build:prod --workspace=services/host\" \"npm run build:prod --workspace=services/shop\" \"npm run build:prod --workspace=services/product\" \"npm run build:prod --workspace=services/auth\"",
         "start:database:prod": "cd backend/database && npm run start",
         "start:productService:prod": "cd backend/product-service && npm run start",
         "start:authService:prod": "cd backend/auth-service && npm run start",
