--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "start:backend:prod": "concurrently \"npm run start:database:prod\" \"npm run start:productService:prod\" \"npm run start:authService:prod\"",
         "start": "concurrently \"npm run start:backend:prod\" \"npm run prisma:generate\" \"npm run start:frontend:prod\"",
 
-        "firstly": "npm i && prisma:generate && cd ../../ && npm run start:dev && npm run prisma"
+        "firstly": "npm i && npm run prisma:generate && npm run start:dev && npm run prisma"
     },
     "workspaces": [
         "packages/*",
