fixed a bug with a product list rendering error in shopPlaceholder

--- a/services/admin/tsconfig.json
+++ b/services/admin/tsconfig.json
@@ -1,10 +1,27 @@
+// {
+//   "extends": "../tsconfig.base.json",
+//   "compilerOptions": {
+//     "outDir": "./dist/",
+//     "baseUrl": ".",
+//     "paths": {
+//       "@/*": ["./src/*"]
+//     }
+//   }
+// }
+
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./dist/",
+    "jsx": "react-jsx",
     "baseUrl": ".",
+    "allowJs": true,
+    "composite": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@shop/*": ["../../services/shop/src/*"]
     }
   }
 }
