--- a/services/admin/tsconfig.json
+++ b/services/admin/tsconfig.json
@@ -21,7 +21,7 @@
     "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": ["./src/*"],
-      "@shop/*": ["../../services/shop/src/*"]
+      "@shop/*": ["../../services/shop/src/*"],
     }
   }
 }
