--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start:database": "cd backend/database && npm run start:dev",
         "start:productService": "cd backend/product-service && npm run start:dev",
         "start:authService": "cd backend/auth-service && npm run start:dev",
+        "start:adminService": "cd backend/admin-service && npm run start:dev",
         "start:backend": "concurrently \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\"",
         "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
         "prisma:generate": "cd backend/database && npx prisma generate",
@@ -17,7 +18,8 @@
         "start:database:prod": "cd backend/database && npm run start",
         "start:productService:prod": "cd backend/product-service && npm run start",
         "start:authService:prod": "cd backend/auth-service && npm run start",
-        "start:backend:prod": "concurrently \"npm run start:database:prod\" \"npm run start:productService:prod\" \"npm run start:authService:prod\"",
+        "start:adminService:prod": "cd backend/admin-service && npm run start",
+        "start:backend:prod": "concurrently \"npm run start:database:prod\" \"npm run start:productService:prod\" \"npm run start:authService:prod\" \"start:adminService:prod\"",
         "start": "concurrently \"npm run start:backend\" \"npm run prisma:generate\" \"npm run start:frontend\"",
 
         "firstly": "npm i && npm run prisma:generate && npm run start:dev && npm run prisma"
