Destructuring the adminShopUsers page

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -15,6 +15,9 @@
             "@shop/*": [
                 "../../services/shop/src/*"
             ],
+            "@admin/*": [
+                "../../services/admin/src/*"
+            ],
             "@product/*": [
                 "../../services/product/src/*"
             ],
