--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
 
         "prisma:generate": "cd backend && npm run prisma:generate",
-        "prisma": "cd backend && npx run prisma",
+        "prisma": "cd backend && npm run prisma",
 
         "firstly": "npm i && npm run prisma:generate && npm run start:dev && npm run prisma"
     },
