--- a/backend/services/database/package.json
+++ b/backend/services/database/package.json
@@ -30,7 +30,9 @@
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/platform-express": "^11.1.5",
     "@prisma/client": "^6.12.0",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
+    "multer": "^2.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
