--- a/services/shop/package.json
+++ b/services/shop/package.json
@@ -2,8 +2,9 @@
   "name": "shop",
   "version": "1.0.0",
   "dependencies": {
-    "@packages/shared": "*",
     "@packages/build-config": "*",
+    "@packages/shared": "*",
+    "axios": "^1.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
