--- a/backend/services/database/package.json
+++ b/backend/services/database/package.json
@@ -20,9 +20,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
-  },
   "dependencies": {
     "@nestjs/common": "^11.1.5",
     "@nestjs/core": "^11.1.5",
@@ -30,6 +27,7 @@
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/platform-express": "^11.1.5",
     "@prisma/client": "^6.12.0",
+    "@prisma/config": "^6.14.0",
     "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.2",
     "multer": "^2.0.2",
