--- a/backend/services/auth-service/package.json
+++ b/backend/services/auth-service/package.json
@@ -20,11 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    
-  },
-  "devDependencies": {
-
-
+    "@nestjs/jwt": "^11.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
