--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "devDependencies": {
         "@types/node": "^22.13.10",
         "concurrently": "^9.1.2"
+    },
+    "dependencies": {
+        "dotenv": "^17.2.1"
     }
 }
