shared on the backend is now compiled as an npm package. Guards are connected on fashion/admin.

--- a/backend/services/admin-service/package.json
+++ b/backend/services/admin-service/package.json
@@ -5,6 +5,8 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "main": "./dist/services/admin-service/src/main.js",
+  "types": "./dist/services/admin-service/src/main.d.ts",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -18,13 +20,6 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
-  },
-  "dependencies": {
-
-
-  },
-  "devDependencies": {
-    
   },
   "jest": {
     "moduleFileExtensions": [
