--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,12 @@
     "start:productService": "cd services/product-service && npm run start:dev",
     "start:authService": "cd services/auth-service && npm run start:dev",
     "start:adminService": "cd services/admin-service && npm run start:dev",
-    "start:backend": "concurrently \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
+
+    "build:shared": "tsc -b packages/shared",
+
+    "start:backend": "concurrently \" npm run build:shared \" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
     "start:dev": "concurrently \"npm run start:backend\"",
+
     "prisma:generate": "cd services/database && npx prisma generate",
     "prisma": "cd services/database && npx prisma studio"
   },
@@ -22,6 +26,7 @@
   "dependencies": {
     "@nestjs/common": "^11.1.5",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/platform-express": "^11.0.1",
@@ -30,6 +35,7 @@
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
     "dotenv": "^16.6.1",
+    "module-alias": "^2.2.3",
     "nodemailer": "^7.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
