--- a/backend/packages/shared/package.json
+++ b/backend/packages/shared/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "packages",
+  "name": "@packages/shared",
   "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
-  "author": "Duzia Serhii",
-  "type": "commonjs",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
     "@nestjs/jwt": "^11.0.0"
