--- a/backend/services/admin-service/tsconfig.json
+++ b/backend/services/admin-service/tsconfig.json
@@ -9,13 +9,21 @@
     "target": "ES2023",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@packages/shared/*": ["../../packages/shared/src/*"]
+    },
+    
+  },
+  "include": [
+    "src",
+    "../../packages/shared/src"
+  ]
 }
