--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,10 @@
     "start:authService": "cd services/auth-service && npm run start:dev",
     "start:adminService": "cd services/admin-service && npm run start:dev",
 
-    "build:shared": "tsc -b packages/shared",
+    "build:shared:watch": "cd packages/shared && npm run build:watch",
 
-    "start:backend": "concurrently \" npm run build:shared \" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
-    "start:dev": "concurrently \"npm run start:backend\"",
+    "start:backend": "concurrently \" build:shared:watch \" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
+    "start:dev": "npm run start:backend",
 
     "prisma:generate": "cd services/database && npx prisma generate",
     "prisma": "cd services/database && npx prisma studio"
