--- a/backend/packages/shared/package.json
+++ b/backend/packages/shared/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json"
+    "build:watch": "tsc -w -p ./tsconfig.json"
+
   },
   "dependencies": {
     "@nestjs/jwt": "^11.0.0"
