--- a/backend/packages/shared/tsconfig.json
+++ b/backend/packages/shared/tsconfig.json
@@ -1,10 +1,31 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
+    "module": "commonjs",
     "declaration": true,
-    "composite": true
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2023",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "rootDir": "src",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "noFallthroughCasesInSwitch": false,
+    "composite": true,
+    "paths": {
+      "@packages/shared/*": [
+        "../../packages/shared/dist/*"
+      ]
+    }
   },
-  "include": ["src"]
+  // "include": [
+  //   "src"
+  // ]
 }
