--- a/backend/services/admin-service/package.json
+++ b/backend/services/admin-service/package.json
@@ -5,8 +5,8 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "main": "./dist/services/admin-service/src/main.js",
-  "types": "./dist/services/admin-service/src/main.d.ts",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
