--- a/backend/services/admin-service/tsconfig.build.json
+++ b/backend/services/admin-service/tsconfig.build.json
@@ -7,13 +7,8 @@
     "**/*spec.ts"
   ],
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./dist",
     "removeComments": true,
     "sourceMap": true
   },
-  "references": [
-    {
-      "path": "../../packages/shared"
-    }
-  ]
 }
