--- a/backend/services/admin-service/tsconfig.json
+++ b/backend/services/admin-service/tsconfig.json
@@ -10,6 +10,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": ".",
+    "rootDir": ".",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
@@ -18,12 +19,12 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@packages/shared/*": ["../../packages/shared/src/*"]
+      "@packages/shared/*": ["../../packages/shared/*"]
     },
     
   },
   "include": [
     "src",
-    "../../packages/shared/src"
+    // "../../packages/shared"
   ]
 }
