--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,6 +7,15 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "composite": true
-    }
+        "composite": true,
+    },
+    // "files": [],
+    // "references": [
+    //     {
+    //         "path": "./packages/shared"
+    //     },
+    //     {
+    //         "path": "./services/admin-service"
+    //     }
+    // ]
 }
