--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
         "prisma:generate": "cd backend && npm run prisma:generate",
         "prisma": "cd backend && npm run prisma",
-        "firstly": "npm i && npm run prisma:generate && npm run start:dev && npm run prisma"
+        "firstly": "npm i && npm run prisma:generate && npm run start:dev && npm run prisma",
+
+        "build:frontend": "concurrently -n admin,host,shop,header,productPage,auth \"npm run build:prod --workspace=services/admin\" \"npm run build:prod --workspace=services/host\" \"npm run build:prod --workspace=services/shop\" \"npm run build:prod --workspace=services/product\" \"npm run build:prod --workspace=services/auth\""
     },
     "workspaces": [
         "packages/*",
