--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
 
     "build:shared:watch": "cd packages/shared && npm run build:watch",
 
-    "start:backend": "concurrently \" build:shared:watch \" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
+    "start:backend": "concurrently \"npm run build:shared:watch\" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
     "start:dev": "npm run start:backend",
 
     "prisma:generate": "cd services/database && npx prisma generate",
