--- a/backend/services/database/tsconfig.json
+++ b/backend/services/database/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
     "declaration": true,
@@ -9,14 +10,22 @@
     "target": "ES2023",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./",
-    // "rootDir": "./src",
+    "baseUrl": ".",
+    "rootDir": ".",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@packages/shared/*": ["../../packages/shared/*"]
+    },
+    
+  },
+  "include": [
+    "src",
+    // "../../packages/shared"
+  ]
 }
