--- a/backend/services/database/tsconfig.json
+++ b/backend/services/database/tsconfig.json
@@ -11,7 +11,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": ".",
-    "rootDir": ".",
+    // "rootDir": ".",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
