--- a/backend/packages/shared/package.json
+++ b/backend/packages/shared/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@nestjs/jwt": "^11.0.0",
     "@types/multer": "^2.0.0",
+    "bcrypt": "^6.0.0",
     "multer": "^2.0.2"
   }
 }
