--- a/backend/packages/shared/package.json
+++ b/backend/packages/shared/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "@nestjs/jwt": "^11.0.0",
+    "@types/mime-types": "^3.0.1",
     "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
-    "multer": "^2.0.2"
+    "mime-types": "^3.0.1",
+    "multer": "^2.0.2",
+    "sharp": "^0.34.3"
   }
 }
