--- a/backend/packages/shared/package.json
+++ b/backend/packages/shared/package.json
@@ -11,6 +11,7 @@
     "@types/mime-types": "^3.0.1",
     "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
+    "mime": "^4.0.7",
     "mime-types": "^3.0.1",
     "multer": "^2.0.2",
     "sharp": "^0.34.3"
