--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "scripts": {
         "start:frontend": "concurrently -n admin,host,shop,header,productPage,auth \"npm run start --workspace=services/admin\" \"npm run start --workspace=services/host\" \"npm run start --workspace=services/shop\" \"npm run start --workspace=services/product\" \"npm run start --workspace=services/auth\"",
-        "start:backend": "cd backend && npm run start:dev",
+        "start:backend": "cd backend && npm run start:backend",
         "start:dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
         "prisma:generate": "cd backend && npm run prisma:generate",
         "prisma": "cd backend && npm run prisma",
