--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,11 @@
     "start:productService": "cd services/product-service && npm run start:dev",
     "start:authService": "cd services/auth-service && npm run start:dev",
     "start:adminService": "cd services/admin-service && npm run start:dev",
+
     "build:shared:watch": "cd packages/shared && npm run build:watch",
-    "start:backend": "concurrently \"npm run build:shared:watch\" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
+    "build:config:watch": "cd packages/shared && npm run build:watch",
+
+    "start:backend": "concurrently \"npm run build:shared:watch\" \" build:config:watch \" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
     "start:dev": "npm run start:backend",
     "prisma:generate": "cd services/database && npx prisma generate",
     "prisma": "cd services/database && npx prisma studio"
