--- a/backend/packages/config/tsconfig.json
+++ b/backend/packages/config/tsconfig.json
@@ -1,7 +1,6 @@
 {
-  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "nodenext",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
@@ -9,9 +8,9 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2023",
     "sourceMap": true,
-    "outDir": "./dist",
+    "outDir": "dist",
     "baseUrl": ".",
-    "rootDir": ".",
+    "rootDir": "src",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
@@ -19,13 +18,14 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
+    "composite": true,
     "paths": {
-      "@packages/shared/*": ["../../packages/shared/*"],
-      "@packages/config/*": ["../../packages/config/*"]
-    },
-    
+      "@packages/config/*": [
+        "../../packages/config/dist/*"
+      ]
+    }
   },
-  "include": [
-    "src",
-  ]
+  // "include": [
+  //   "src"
+  // ]
 }
