basePipline for registerJwt builred added. Fixed config compile command

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,9 @@
     "start:adminService": "cd services/admin-service && npm run start:dev",
 
     "build:shared:watch": "cd packages/shared && npm run build:watch",
-    "build:config:watch": "cd packages/shared && npm run build:watch",
+    "build:config:watch": "cd packages/config && npm run build:watch",
 
-    "start:backend": "concurrently \"npm run build:shared:watch\" \" build:config:watch \" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
+    "start:backend": "concurrently \"npm run build:shared:watch\" \"npm run build:config:watch\" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
     "start:dev": "npm run start:backend",
     "prisma:generate": "cd services/database && npx prisma generate",
     "prisma": "cd services/database && npx prisma studio"
