--- a/backend/services/admin-service/tsconfig.json
+++ b/backend/services/admin-service/tsconfig.json
@@ -20,7 +20,8 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@packages/shared/*": ["../../packages/shared/*"]
+      "@packages/shared/*": ["../../packages/shared/*"],
+      "@packages/config/*": ["../../packages/config/*"]
     },
     
   },
