Temporarily fixed the error with imports using aliases by introducing absolute imports. Fix in progress.

--- a/backend/packages/config/package.json
+++ b/backend/packages/config/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@packages/config",
   "version": "1.0.0",
-  "main": "./src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "build": "tsc -p ./tsconfig.json",
     "build:watch": "tsc -w -p ./tsconfig.json"
   },
   "dependencies": {
