--- a/backend/services/admin-service/tsconfig.json
+++ b/backend/services/admin-service/tsconfig.json
@@ -13,20 +13,23 @@
     "baseUrl": ".",
     "rootDir": ".",
     "incremental": true,
-    "skipLibCheck": true,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@packages/shared/*": ["../../packages/shared/*"],
-      "@packages/config/*": ["../../packages/config/*"]
+      "@packages/shared/*": ["../../packages/shared/dist/*"],
+      "@packages/config/*": ["../../../packages/config/dist/*"]
     },
-    
+    "typeRoots": ["../../../node_modules/@types"],
+    "types": ["express", "node"],
+    "skipLibCheck": true
   },
   "include": [
-    "src",
-    // "../../packages/shared"
+    "src"
+  ],
+  "exclude": [
+    "../../../packages"
   ]
 }
