--- a/backend/services/auth-service/tsconfig.json
+++ b/backend/services/auth-service/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@packages/shared/*": ["../../packages/shared/*"],
-      "@packages/config/*": ["../../packages/config/*"]
+      "@packages/config/*": ["../../../packages/config/dist/*"]
     },
     
   },
