--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,14 @@
     "start:productService": "cd services/product-service && npm run start:dev",
     "start:authService": "cd services/auth-service && npm run start:dev",
     "start:adminService": "cd services/admin-service && npm run start:dev",
-
     "build:shared:watch": "cd packages/shared && npm run build:watch",
     "build:config:watch": "cd packages/config && npm run build:watch",
-
     "start:backend": "concurrently \"npm run build:shared:watch\" \"npm run build:config:watch\" \"npm run start:database\" \"npm run start:productService\" \"npm run start:authService\" \"npm run start:adminService\"",
     "start:dev": "npm run start:backend",
     "prisma:generate": "cd services/database && npx prisma generate",
     "prisma": "cd services/database && npx prisma studio"
   },
+  "private": true,
   "workspaces": [
     "packages/*",
     "services/*"
@@ -48,8 +47,9 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
