--- a/backend/services/auth-service/package.json
+++ b/backend/services/auth-service/package.json
@@ -22,7 +22,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/jwt": "^11.0.0"
+    "@nestjs/jwt": "^11.0.0",
+    "@packages/config": "*"
   },
   "jest": {
     "moduleFileExtensions": [
