--- a/backend/packages/shared/package.json
+++ b/backend/packages/shared/package.json
@@ -15,6 +15,7 @@
     "mime": "^4.0.7",
     "mime-types": "^3.0.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
     "sharp": "^0.34.3"
   }
 }
