--- a/backend/services/database/.gitignore
+++ b/backend/services/database/.gitignore
@@ -56,3 +56,8 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 !.env.development
+
+BEST_PRACTICES.md
+INTEGRATION.md
+MIGRATION_GUIDE.md
+README.md
